Completata fase di login via API.

--- a/catalogo_esistente/app/config/config.yml
+++ b/catalogo_esistente/app/config/config.yml
@@ -106,3 +106,7 @@ fm_elfinder:
                         upload_allow: ['image/png', 'image/jpg', 'image/jpeg']
                         upload_deny: ['all']
                         upload_max_size: 2M
+services:
+    autenticatore_apikey:
+        class:     QwebCMS\CatalogoBundle\Security\ApiKeyAuthenticator
+        arguments: ["@fornitore_utenti_apikey"]
