Terminata gestione di login con Api

--- a/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/config/services.yml
+++ b/catalogo_esistente/src/QwebCMS/CatalogoBundle/Resources/config/services.yml
@@ -5,3 +5,4 @@ services:
 
     fornitore_utenti_apikey:
         class: QwebCMS\CatalogoBundle\Security\ApiKeyUserProvider
+        arguments: [ @doctrine.orm.entity_manager ]
