Gestite exception per: chiave non presente, chiave non corrisponde su database.

--- a/catalogo_esistente/app/config/security.yml
+++ b/catalogo_esistente/app/config/security.yml
@@ -41,6 +41,9 @@ security:
             stateless: false
             simple_preauth:
                 authenticator: autenticatore_apikey
+            logout:
+                path:   /logout
+                target: /login
 
         default:
             anonymous: ~
