Terminate CRUD di Categorie, Feature, FeatureValues.

--- a/catalogo_esistente/app/config/config.yml
+++ b/catalogo_esistente/app/config/config.yml
@@ -115,3 +115,5 @@ oneup_uploader:
     mappings:
         gallery:
             frontend: dropzone
+            storage:
+              directory:  '/uploads/gallery'
