--- a/catalogo_esistente/app/config/config.yml
+++ b/catalogo_esistente/app/config/config.yml
@@ -117,3 +117,15 @@ oneup_uploader:
             frontend: dropzone
             storage:
               directory:  '/uploads/gallery'
+
+knp_paginator:
+    page_range: 10                      # default page range used in pagination control
+    default_options:
+        page_name: page                # page query parameter name
+        sort_field_name: sort          # sort field query parameter name
+        sort_direction_name: ord       # sort direction query parameter name
+        distinct: true                 # ensure distinct results, useful when ORM queries are using GROUP BY statements
+    template:
+        pagination: KnpPaginatorBundle:Pagination:twitter_bootstrap_v3_pagination.html.twig     # sliding pagination controls template
+        sortable: KnpPaginatorBundle:Pagination:sortable_link.html.twig # sort link template
+        filtration: KnpPaginatorBundle:Pagination:filtration.html.twig
