--- a/catalogo_esistente/composer.json
+++ b/catalogo_esistente/composer.json
@@ -23,7 +23,10 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "helios-ag/fm-elfinder-bundle": "~5",
         "liip/imagine-bundle": "^1.3",
-        "oneup/uploader-bundle": "~1.3"
+        "oneup/uploader-bundle": "~1.3",
+        "doctrine/migrations": "1.0.*@dev",
+        "doctrine/doctrine-migrations-bundle": "2.1.*@dev",
+        "knplabs/knp-paginator-bundle": "^2.4"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
