--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -15,3 +15,6 @@ logout:
 oneup_uploader:
     resource: .
     type: uploader
+
+_liip_imagine:
+    resource: "@LiipImagineBundle/Resources/config/routing.xml"
