Installato Liip Imagine Bundle, per la gestione delle modifiche sulle immagini caricate, usato nel controller di upload, aggiornati template aggiungendo immagini ridimensionate.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -137,7 +137,7 @@ liip_imagine:
 
     filter_sets:
         cache: ~
-        my_thumb:
+        img_preview:
             quality: 75
             filters:
                 thumbnail: { size: [120, 90], mode: outbound }
