--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -15,4 +15,4 @@ services:
         class: QwebCMS\CatalogoBundle\EventListener\UploadListener
         tags:
             - { name: kernel.event_listener, event: oneup_uploader.post_persist, method: onUpload }
-        arguments: ['@doctrine']
+        arguments: ['@doctrine', '@service_container']
