--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -23,3 +23,23 @@ monolog:
             level: debug
         console:
             type:  console
+
+liip_imagine:
+
+    resolvers:
+        default:
+            web_path:
+                web_root: %kernel.root_dir%/../public_html  # %kernel.root_dir%/../web
+                cache_prefix: media/cache # media/cache
+
+    loaders:
+        default:
+            filesystem:
+                data_root: /home/catalogoqweb/public_html/
+
+    filter_sets:
+        cache: ~
+        img_preview:
+            quality: 75
+            filters:
+                thumbnail: { size: [120, 90], mode: outbound }
