--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -58,3 +58,9 @@ liip_imagine:
             quality: 75
             filters:
                 thumbnail: { size: [120, 90], mode: outbound }
+        big_thumb_1:
+            filters:
+                thumbnail: { size: [800, 600], mode: outbound }
+        big_thumb:
+            filters:
+                relative_resize: { widen: 800 }
