Modifica impostazioni ambiente produzione

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -27,10 +27,8 @@ monolog:
 liip_imagine:
 
     resolvers:
-        default:
-            web_path:
-                web_root: %kernel.root_dir%/../public_html  # %kernel.root_dir%/../web
-                cache_prefix: media/cache # media/cache
+       default:
+          web_path: ~
 
     filter_sets:
         cache: ~
