--- a/src/QwebCMS/CatalogoBundle/Resources/config/routing.yml
+++ b/src/QwebCMS/CatalogoBundle/Resources/config/routing.yml
@@ -97,3 +97,7 @@ delete_featurevalues:
 delete_photo:
     path:     /foto/cancella/{id}
     defaults: { _controller: QwebCMSCatalogoBundle:Foto:cancella }
+
+update_position_photo:
+    path:     /foto/update
+    defaults: { _controller: QwebCMSCatalogoBundle:Foto:updatePosition }
