Creato metodo di rinominare immagini dopo upload customizzato

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -115,6 +115,7 @@ oneup_uploader:
     mappings:
         gallery:
             frontend: dropzone
+            namer: custom_namer
             storage:
               directory:  'uploads/gallery'
 
