--- a/src/QwebCMS/CatalogoBundle/Resources/config/services.yml
+++ b/src/QwebCMS/CatalogoBundle/Resources/config/services.yml
@@ -6,3 +6,6 @@ services:
     fornitore_utenti_apikey:
         class: QwebCMS\CatalogoBundle\Security\ApiKeyUserProvider
         arguments: [ @doctrine.orm.entity_manager ]
+
+    custom_namer:
+            class: QwebCMS\CatalogoBundle\Naming\NomeNamer
