--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -138,15 +138,15 @@ liip_imagine:
             quality: 100
             filters:
                 thumbnail: { size: [196, 147], mode: outbound }
-        big_thumb_1:
+        img_small:
             quality: 100
             filters:
                 thumbnail: { size: [360, 270], mode: outbound }
-        big_thumb:
+        img_medium:
             quality: 100
             filters:
                 relative_resize: { widen: 700 }
-        big_thumb_2:
+        img_large:
             quality: 100
             filters:
                 relative_resize: { widen: 1200 }
