--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -150,8 +150,8 @@ liip_imagine:
             quality: 100
             filters:
                 relative_resize: { widen: 1200 }
-            post_processors:
-                jpegoptim: {}
+#            post_processors:
+#                jpegoptim: {}
 
 
 knp_paginator:
