--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -96,8 +96,8 @@ liip_imagine:
     resolvers:
        default:
           web_path:
-            web_root: "%kernel.root_dir%/../../public_html"
-            cache_prefix: "public/catalogo"
+            web_root: "%kernel.root_dir%/../../public_html/public"
+            cache_prefix: "catalogo"
 
     filter_sets:
         cache: ~
