--- a/src/QwebCMS/CatalogoBundle/Resources/config/services.yml
+++ b/src/QwebCMS/CatalogoBundle/Resources/config/services.yml
@@ -1,11 +1,8 @@
 services:
-#    qweb_cms_catalogo.example:
-#        class: QwebCMS\CatalogoBundle\Example
-#        arguments: [@service_id, "plain_value", %parameter%]
-
     fornitore_utenti_apikey:
         class: QwebCMS\CatalogoBundle\Security\ApiKeyUserProvider
         arguments: [ @doctrine.orm.entity_manager ]
 
     custom_namer:
-            class: QwebCMS\CatalogoBundle\Naming\NomeNamer
+        class: QwebCMS\CatalogoBundle\Naming\NomeNamer
+        arguments: [ @doctrine.orm.entity_manager ]
