--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -123,6 +123,10 @@ liip_imagine:
             quality: 100
             filters:
                 relative_resize: { widen: 1200 }
+        mini_img:
+            quality: 100
+            filters:
+                relative_resize: { widen: 100 }
 #            post_processors:
 #                jpegoptim: {}
 
