Aggiunto nuovo custom Namer per uploader planimetrie

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -87,7 +87,7 @@ oneup_uploader:
 
         planimetrie:
             frontend: dropzone
-            namer: custom_namer
+            namer: custom_planimetrie_namer
             storage:
               directory:  'uploads/planimetrie'
 
