--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -118,7 +118,8 @@ liip_imagine:
         img_medium:
             quality: 100
             filters:
-                relative_resize: { widen: 700 }
+                #relative_resize: { widen: 700 }
+                thumbnail: { size: [740, 500], mode: outbound }
         img_large:
             quality: 100
             filters:
