--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -27,6 +27,9 @@ framework:
 
 # Twig Configuration
 twig:
+    form:
+        resources:
+            - 'QwebCMSCatalogoBundle:Form:fields.html.twig'
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
     form_themes:
