--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -34,6 +34,7 @@ twig:
     strict_variables: "%kernel.debug%"
     form_themes:
             # other form themes
+            #- 'bootstrap_3_layout.html.twig'
             - 'VichUploaderBundle:Form:fields.html.twig'
 
 # Assetic Configuration
