--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
         "doctrine/doctrine-migrations-bundle": "2.1.*@dev",
         "knplabs/knp-paginator-bundle": "^2.4",
         "stfalcon/tinymce-bundle": "0.3.9",
-        "vich/uploader-bundle": "^0.14.0"
+        "vich/uploader-bundle": "^0.14.0",
+        "doctrine/common": "v2.5.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
