--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,11 @@
         "liip/imagine-bundle": "^1.3",
         "oneup/uploader-bundle": "^1.5",
         "doctrine/migrations": "1.0.*@dev",
-        "doctrine/doctrine-migrations-bundle": "2.1.*@dev",
         "knplabs/knp-paginator-bundle": "^2.5",
         "stfalcon/tinymce-bundle": "0.3.9",
         "vich/uploader-bundle": "^0.14.0",
-        "doctrine/common": "v2.5.3"
+        "doctrine/common": "v2.5.3",
+        "doctrine/doctrine-migrations-bundle": "^1.1"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
