--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -164,3 +164,10 @@ vich_uploader:
             inject_on_load:     false
             delete_on_update:   true
             delete_on_remove:   true
+
+        product_image:
+            uri_prefix:         /allegati
+            upload_destination: %kernel.root_dir%/../web/allegati
+            inject_on_load:     true
+            delete_on_update:   true
+            delete_on_remove:   true
