--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -165,7 +165,7 @@ vich_uploader:
             delete_on_update:   true
             delete_on_remove:   true
 
-        product_image:
+        allegati:
             uri_prefix:         /allegati
             upload_destination: %kernel.root_dir%/../web/allegati
             inject_on_load:     true
