--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "2.6.*",
+        "symfony/symfony": "2.8.*",
         "doctrine/orm": "~2.2,>=2.2.3,<2.5",
         "doctrine/dbal": "<2.5",
         "doctrine/doctrine-bundle": "~1.2",
@@ -21,13 +21,12 @@
         "sensio/distribution-bundle": "~3.0,>=3.0.12",
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "helios-ag/fm-elfinder-bundle": "~5",
         "liip/imagine-bundle": "^1.3",
         "oneup/uploader-bundle": "^1.5",
-        "doctrine/migrations": "1.0.*@dev",
+        "doctrine/migrations": "1.0.*",
         "knplabs/knp-paginator-bundle": "^2.5",
         "stfalcon/tinymce-bundle": "0.3.9",
-        "vich/uploader-bundle": "^0.14.0",
+        "vich/uploader-bundle": "*",
         "doctrine/common": "v2.5.3",
         "doctrine/doctrine-migrations-bundle": "^1.1",
         "ircmaxell/password-compat": "~1.0"
