--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,18 @@
 /web/assets/jquery-ui/*
 /web/allegati/*
 /web/logo/*
-Vagrantfile
-/ansible
-/.vagrant
+
+/.web-server-pid
+/build/
+/phpunit.xml
+/var/*
+!/var/cache
+/var/cache/*
+!var/cache/.gitkeep
+!/var/logs
+/var/logs/*
+!var/logs/.gitkeep
+!/var/sessions
+/var/sessions/*
+!var/sessions/.gitkeep
+!var/SymfonyRequirements.php
