--- a/composer.json
+++ b/composer.json
@@ -3,42 +3,34 @@
     "license": "proprietary",
     "type": "project",
     "autoload": {
-        "psr-0": {
-            "": "src/",
-            "SymfonyStandard": "app/"
-        }
+        "psr-4": { "": "src/" },
+        "classmap": [ "app/AppKernel.php", "app/AppCache.php" ]
+    },
+    "autoload-dev": {
+        "psr-4": { "Tests\\": "tests/" }
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "2.8.*",
-        "doctrine/orm": "~2.2,>=2.2.3,<2.5",
-        "doctrine/dbal": "<2.5",
-        "doctrine/doctrine-bundle": "~1.2",
-        "twig/extensions": "~1.0",
-        "symfony/assetic-bundle": "~2.3",
-        "symfony/swiftmailer-bundle": "~2.3",
-        "symfony/monolog-bundle": "~2.4",
-        "sensio/distribution-bundle": "~3.0,>=3.0.12",
-        "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
-        "incenteev/composer-parameter-handler": "~2.0",
+        "symfony/symfony": "3.4.*",
+        "doctrine/orm": "^2.5",
+        "doctrine/doctrine-bundle": "^1.6",
+        "doctrine/doctrine-cache-bundle": "^1.2",
+        "symfony/swiftmailer-bundle": "^2.3",
+        "symfony/monolog-bundle": "^3.1",
+        "sensio/distribution-bundle": "^5.0",
+        "sensio/framework-extra-bundle": "^3.0.2",
+        "incenteev/composer-parameter-handler": "^2.0",
+
         "liip/imagine-bundle": "^1.3",
         "oneup/uploader-bundle": "^1.5",
-        "doctrine/migrations": "1.0.*",
         "knplabs/knp-paginator-bundle": "^2.5",
-        "stfalcon/tinymce-bundle": "0.3.9",
-        "vich/uploader-bundle": "*",
-        "doctrine/common": "v2.5.3",
-        "doctrine/doctrine-migrations-bundle": "^1.1",
-        "ircmaxell/password-compat": "~1.0"
+        "stfalcon/tinymce-bundle": "^2.0",
+        "vich/uploader-bundle": "1.4.0",
+        "symfony/assetic-bundle": "^2.8"
     },
     "require-dev": {
-        "sensio/generator-bundle": "~2.3",
-        "phpunit/phpunit": "^4.8",
-        "behat/behat": "^3.1",
-        "behat/symfony2-extension": "^2.1",
-        "behat/mink": "^1.7",
-        "behat/mink-extension": "^2.2",
-        "behat/mink-browserkit-driver": "^1.3"
+        "sensio/generator-bundle": "^3.0",
+        "symfony/phpunit-bridge": "^3.0"
     },
     "scripts": {
         "post-root-package-install": [
@@ -70,6 +62,8 @@
     "extra": {
         "symfony-app-dir": "app",
         "symfony-web-dir": "web",
+        "symfony-var-dir": "var",
+        "symfony-bin-dir": "bin",
         "symfony-assets-install": "relative",
         "incenteev-parameters": {
             "file": "app/config/parameters.yml"
